--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "type": "module",
   "main": "Server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node Server.js"
   },
+  
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "mongoose": "^9.0.0",
     "nodemon": "^3.1.11"
-  }
+  },
+  "engines": {
+  "node": "18.x"
+}
 }
